--- a/package.json
+++ b/package.json
@@ -17,26 +17,27 @@
     "license": "MIT",
     "author": "Nick Staroba",
     "scripts": {
-        "build": "npm run bundle",
-        "bundle": "rollup -c",
-        "bundle:watch": "rollup -w -c",
-        "commit-msg": "sh scripts/git-hooks/commit-msg.sh ${HUSKY_GIT_PARAMS}",
-        "install:cleanup": "rimraf package-lock.json ; rimraf node_modules",
+        "build": "rollup --config rollup.config.js",
+        "build:watch": "rollup --config rollup.config.js --watch",
+        "clean:build": "npx --ignore-existing --quiet rimraf dist/**/*",
+        "clean:build-deps": "npx --ignore-existing --quiet rimraf dist/node_modules",
+        "clean:deps": "npx --ignore-existing --quiet rimraf package-lock.json node_modules",
         "lint": "npm run lint:compile && npm run lint:eslint && npm run lint:stylelint && npm run lint:prettier",
-        "lint:compile": "tsc -p tsconfig.json --noEmit --noErrorTruncation --pretty",
-        "lint:eslint": "eslint '**/*.{js,jsx,ts,tsx}' --fix",
-        "lint:prettier": "prettier './**/*.{css,html,js,json,jsx,md,scss,ts,tsx}' --write",
-        "lint:stylelint": "stylelint 'src/**/*.{css,scss}'",
+        "lint:compile": "tsc --project tsconfig.json --noEmit --noErrorTruncation --pretty",
+        "lint:eslint": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix",
+        "lint:prettier": "prettier \"./**/*.{css,html,js,json,jsx,md,scss,ts,tsx}\" --write",
+        "lint:stylelint": "stylelint \"src/**/*.{css,scss}\"",
+        "prepare-commit-msg": "sh scripts/git-hooks/prepare-commit-msg.sh",
         "release": "standard-version",
         "start": "start-storybook",
-        "test": "jest -w 1",
-        "test:coverage": "jest --coverage -w 1",
+        "test": "jest --maxWorkers 1",
+        "test:coverage": "jest --coverage --maxWorkers 1",
         "watch": "npm-run-all --parallel *:watch"
     },
     "husky": {
         "hooks": {
             "pre-commit": "npm run lint",
-            "commit-msg": "npm run commit-msg",
+            "prepare-commit-msg": "npm run prepare-commit-msg ${HUSKY_GIT_PARAMS}",
             "pre-push": "npm run lint && npm run test"
         }
     },
@@ -49,7 +50,6 @@
     "devDependencies": {
         "@babel/core": "7.9.0",
         "@react-hook/window-size": "1.0.13",
-        "@rollup/plugin-commonjs": "11.0.2",
         "@rollup/plugin-image": "2.0.4",
         "@storybook/react": "5.3.18",
         "@testing-library/jest-dom": "5.3.0",
@@ -62,7 +62,6 @@
         "@types/react-is": "16.7.1",
         "@typescript-eslint/eslint-plugin": "2.26.0",
         "@typescript-eslint/parser": "2.26.0",
-        "@welldone-software/why-did-you-render": "4.0.6",
         "@wessberg/rollup-plugin-ts": "1.2.23",
         "autoprefixer": "9.7.5",
         "babel-loader": "8.1.0",
@@ -91,10 +90,8 @@
         "react-test-renderer": "16.13.1",
         "rimraf": "3.0.2",
         "rollup": "2.3.3",
-        "rollup-plugin-babel": "4.4.0",
         "rollup-plugin-filesize": "6.2.1",
         "rollup-plugin-ignore-import": "1.3.2",
-        "rollup-plugin-node-resolve": "5.2.0",
         "rollup-plugin-peer-deps-external": "2.2.2",
         "rollup-plugin-postcss": "2.5.0",
         "rollup-plugin-terser": "5.3.0",
