--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
         "defaults"
     ],
     "dependencies": {
-        "clsx": "1.1.0"
+        "clsx": "1.1.0",
+        "react-is": "16.13.1"
     },
     "devDependencies": {
         "@babel/core": "7.9.0",
