--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
         "rollup-plugin-peer-deps-external": "2.2.2",
         "rollup-plugin-postcss": "3.1.1",
         "rollup-plugin-terser": "5.3.0",
+        "rollup-plugin-visualizer": "4.0.4",
         "sass-loader": "8.0.2",
         "standard-version": "7.1.0",
         "style-loader": "1.2.1",
